--- a/page/css/play/main.css
+++ b/page/css/play/main.css
@@ -44,7 +44,8 @@ body{
 }
 
 header{
-  
+  position: relative;
+  z-index: 100000;
 }
 /* header [name='sound']{
   
